Add private endpoint for storage and misc. updates

--- a/deploy/templates/app-service/app-service.parameters.json
+++ b/deploy/templates/app-service/app-service.parameters.json
@@ -27,10 +27,10 @@
             "value": true
         },
         "sku": {
-            "value": "Standard"
+            "value": "PremiumV2"
         },
         "skuCode": {
-            "value": "S1"
+            "value": "P1v2"
         },
         "workerSize": {
             "value": "0"
